--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,13 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>{{ page.title }}</title>
-		<!-- link to main stylesheet -->
-<!-- 		<link rel="stylesheet" type="text/css" href="/css/main.css"> -->
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:linda.ilonze@gmail.com">email</a></li>
-        		<li><a href="https://github.com/linda-ilonze">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: html
+---
+
+{% include header.html %}
+
+<main class="page-content" aria-label="Content">
+  <div class="wrapper">
+    {{ content }}
+  </div>
+</main>
+
+{% include footer.html %}
